# gns3-copilot

./: .clinerules  .gitignore  CHECKPOINT_USAGE_GUIDE.md  DOCS_INDEX.md  LANGCHAIN_REFACTOR_PLAN.md  LICENSE  MANIFEST.in  Makefile  PROJECT_OVERVIEW.md  README.md  README_BACKUP.md  README_EN.md  README_LANGUAGE.md  README_NEW.md  README_RAG.md  README_ZH.md  TECHNICAL_SPECS.md  app.py  chainlit.md  env.example  export_checkpoint.py  gns3_copilot.py  import_checkpoint.py  inspect_session.py  langgraph.json  langgraph_get.py  main.py  mkdocs.yml  notebok_en.md  notebok_zh.md  open_projects_info.json  pyproject.toml  requirements.txt  session_backup.json  setup_rag.py  start_services.py  static_server.py  test_gns3_gui_algorithm.py  test_language_adapter.py  test_node_coordinate_reference.py  (+4 more)
.chainlit/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-doc-update.yaml  cd.yaml  ci.yaml  dependency-review.yml  pages-build-deployment.yaml
Architecture/: gns3_copilot_architecture.md
UI/: app.py
agent/: __init__.py  executor_agent.py  gns3_copilot.py  guide_agent.py  monitor_agent.py  planner_agent.py
assets/css/: markdown_folding.css
core/: README.md  __init__.py  bge_m3_config.py  enhanced_command_executor.py  get_all_devices_config.py  get_config_info.py  get_interface_connections.py  get_project_info.py  get_topology_info.py  gns3_agent_tools.py  intelligent_command_executor.py  intelligent_processor.py  language_adapter.py  llm_manager.py  network_commands_kb.py  network_rag_kb.py  rag_enhanced_executor.py  super_large_config_handler.py  verify_modules.py
docs/: API_REFERENCE.md  CONTRIBUTING.md  README.md  gns3-area-drawing-guide_zh.md  gns3-drawing-svg-format-guide.md  gns3-drawing-svg-format-guide_zh.md  notes-feature-guide.md  notes-feature-guide_zh.md
docs/development/: TECHNICAL_SPECS.md  checkpoint-debugging-guide.md
docs/getting-started/: QUICK_DEPLOY.md  README_ZH.md
docs/updates/: COMMANDS_EXPANSION_REPORT.md
docs/user/: FAQ.md  FAQ_ZH.md  (+2 more)
gns3_client/: __init__.py  gns3_topology_reader.py
gns3_copilot/: __init__.py  main.py
gns3fy/: gns3fy_functions_documentation.md
knowledge_base/: Troubleshotting_ip_routing_protocols.txt
langchain_agent/: __init__.py  agent.py  config.py  prompts.py  tools.py
log_config/: __init__.py  logging_config.py
models/: __init__.py  get_open_project_info.py  gns3_web_console.py
process_analyzer/: README.md  __init__.py  documentation_generator.py  langchain_callback.py  md_to_html_converter.py  process_callback.py
prompts/: executor.py  guide.py  monitor.py  planner.py  react_prompt.py  title_prompt.py
public_model/: __init__.py  db_manager.py  get_gns3_device_port.py  parse_tool_content.py
scripts/: auto_commit.py  auto_update_docs.py
test/: OpenRouter-OpenAI-ChatGPT-4o-mini_test.txt  agent_test.py  config_test.ipynb  custom_gns3fy.py  db_manager_test.ipynb  display_tools_nornir.py  get_converi_title.py  get_thread_id.py  get_topology_reader.ipynb  langchain_deepseek_stream.txt  langchain_deepseek_stream_log.txt  langchain_gemini_stream_log.txt  langgraph_checkpoints_get_state.ipynb  langgraph_stream_updates.ipynb  netmiko_test.ipynb  session_metadata.sqlite  stt_client_stream.py  stt_whisper.py  test_concurrent_execution.py  test_config_tools_nornir.py  test_v3_auth.py  tts_chatts_openai_async.py  tts_chattts.py  v3_api_usage_example.py  v3_auth.ipynb  v3_auth_implementation_summary.md  vpcs_config.ipynb  vpcs_tools_test.ipynb
tests/: README.md  README_gns3_create_link_tests.md  conftest.py  get_topology_reader.ipynb  netmiko_test.ipynb  test_checkpoint_utils.py  test_complete_language_fixes.py  test_config_tools_nornir.py  test_connectivity_analysis.py  test_custom_gns3fy_extended.py  test_display_tools_nornir.py  test_english_analysis.py  test_english_connectivity.py  test_enhanced_executor.py  test_gns3_client_comprehensive.py  test_gns3_create_link.py  test_gns3_create_node.py  test_gns3_get_node_temp.py  test_gns3_project_create.py  test_gns3_project_open.py  test_gns3_project_update.py  test_gns3_start_node.py  test_language_fixes.py  test_linux_tools_nornir.py  test_llm_providers.py  test_log_config.py  test_main_connectivity.py  test_prompts.py  test_public_model.py  test_setup.py  test_vpcs_tools_telnetlib3.py  v3_auth.ipynb
tools/: __init__.py  config_tools.py  config_tools_nornir.py  custom_gns3fy.py  device_command_tool.py  display_tools.py  display_tools_nornir.py  gns3_command_executor.py  gns3_create_link.py  gns3_create_node.py  gns3_get_node_temp.py  gns3_node_finder.py  gns3_start_node.py  gns3_topology_reader.py  gns3fy.py  logging_config.py
tools_v2/: __init__.py  config_tools_nornir.py  display_tools_nornir.py  gns3_create_link.py  gns3_create_node.py  gns3_get_node_temp.py  gns3_start_node.py  gns3_topology_reader.py  linux_tools_nornir.py  vpcs_tools_netmiko.py  vpcs_tools_telnetlib3.py
ui/: gradio_ui.py
ui_model/: About.py  Chat.py  Settings.py
(+140 files in other folders)
