[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gns3-copilot"
dynamic = ["version"]
description = "AI-powered network automation assistant for GNS3"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GNS3 Copilot Team"}
]
maintainers = [
    {name = "GNS3 Copilot Team"}
]
keywords = [
    "gns3",
    "network-automation",
    "ai",
    "langchain",
    "nornir",
    "netmiko",
    "networking",
    "automation",
    "copilot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "langchain>=1.0.7",
    "langchain-deepseek>=1.0.1",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-cli>=0.4.4",
    "netmiko>=4.6.0",
    "nornir>=3.5.0",
    "nornir-netmiko>=1.0.1",
    "nornir-utils>=0.2.0",
    "nornir-salt>=0.22.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "pydantic>=2.12.4",
    "PyJWT>=2.10.1",
    "IPython>=8.0.0",
    "typing-extensions>=4.0.0",
    "telnetlib3>=2.0.8",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/yueguobin/gns3-copilot"
Repository = "https://github.com/yueguobin/gns3-copilot"
Documentation = "https://github.com/yueguobin/gns3-copilot/blob/main/README.md"
"Bug Reports" = "https://github.com/yueguobin/gns3-copilot/issues"

[tool.setuptools]
packages = ["agent", "tools_v2", "prompts", "gns3_client", "log_config", "public_model"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt"]
"prompts" = ["*.py"]
"tools_v2" = ["*.py"]
"public_model" = ["*.py"]
"gns3_client" = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "test",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = ["agent", "tools_v2", "prompts", "public_model", "gns3_client"]
omit = [
    "*/tests/*",
    "*/test/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "netmiko.*",
    "nornir.*",
    "langchain.*",
    "langgraph.*",
    "gns3fy.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]

[tool.setuptools_scm]
